[tool.poetry]
name = "auto-email"
version = "1.0.0"
description = "Automatically send weekly basketball invites."
authors = ["Jacob Gray <jlgray024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.35.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
